2008-03-03  Ihar Hrachyshka <booxter@lacinka.org>

	* be@latin.po: Updated Belarusian Latin translation.

2008-03-01  Yair Hershkovitz  <yairhr@gmail.com>

	* he.po: Updated Hebrew translation.

2008-02-29  Ilkka Tuohela <hile@iki.fi>

	* fi.po: Updated Finnish translation.

2008-02-28  Gabriel Burt  <gabriel.burt@gmail.com>
	
	* POTFILES.skip:
	* POTFILES.in: Move RadioConnection to POTFILES.in

2008-02-28  Jonh Wendell  <jwendell@gnome.org>
	
	* POTFILES.in: Updated
	* POTFILES.skip: Created

2008-02-28  Gabriel Burt  <gabriel.burt@gmail.com>
	
	* POTFILES.in: Updated

2008-02-26  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2008-02-20  Duarte Loreto <happyguy_pt@hotmail.com>

	* pt.po: Updated Portuguese translation by Filipe Gomes
	<filipefgomes@gmail.com>.

2008-02-17  Wadim Dziedzic  <wadimd@svn.gnome.org>

	* pl.po: Updated polish translation

2008-01-20  Lasse Bang Mikkelsen  <lbm@lbm.dk>

	* da.po: Updated Danish translation.

2008-01-20  Yair Hershkovitz <yairhr@gmail.com>

	* he.po, LINGUAS: Added Hebrew translation by Mark Krapivner.

2008-01-13  Lasse Bang Mikkelsen  <lbm@lbm.dk>

	* da.po: Updated Danish translation.

2008-01-12  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation

2008-01-05  Gabor Kelemen  <kelemeng@gnome.hu>

	* hu.po: Translation updated

2007-12-31  Yannig Marchegay <yannig@marchegay.org>

	* oc.po: Updated Occitan translation.

2007-12-30  Jorge Gonzalez  <jorgegonz@svn.gnome.org>  

	* es.po: Updated Spanish translation 

2007-12-28  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2007-12-22  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* fr.po: Updated French translation by Florent Le Coz and
	Robert-André Mauchin.

2007-12-19  Ihar Hrachyshka <booxter@lacinka.org>

	* be@latin.po: Updated Belarusian Latin translation.

2007-12-17  Alexandre Prokoudine <alexandre.prokoudine@gmail.com>

	* ru.po: Updated Russian translation.
