@@ -1,0 +1,136 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!-- AUTOGENERATED - DO NOT EDIT -->
+<translators>
+  <language code="ar" name="Arabic">
+    <person>Ahmad Farghal</person>
+    <person>Khaled Hosny</person>
+  </language>
+  <language code="be@latin" name="i18n@mova.org">
+    <person>Ihar Hrachyshka</person>
+  </language>
+  <language code="bg" name="Bulgarian">
+    <person>Vladimir Petkov</person>
+    <person>Rostislav &quot;zbrox&quot; Raykov</person>
+  </language>
+  <language code="ca" name="Catalan">
+    <person>Jordi Mas i Hernàndez</person>
+  </language>
+  <language code="cs" name="Czech">
+    <person>Lukáš Novotný</person>
+    <person>Jakub Friedl</person>
+  </language>
+  <language code="da" name="Danish">
+    <person>Lasse Bang Mikkelsen</person>
+  </language>
+  <language code="de" name="German">
+    <person>Jochen Skulj</person>
+    <person>Daniel Schindler</person>
+  </language>
+  <language code="dz" name="Dzongkha">
+    <person>yumkee lhamo</person>
+  </language>
+  <language code="en_CA" name="Canadian English">
+    <person>Adam Weinberger</person>
+  </language>
+  <language code="en_GB" name="English/GB">
+    <person>David Lodge</person>
+    <person>Christopher Orr</person>
+  </language>
+  <language code="es" name="Spanish">
+    <person>Maria Majadas</person>
+    <person>Jorge González</person>
+    <person>Francisco Javier F. Serrador</person>
+  </language>
+  <language code="fi" name="Finnish">
+    <person>Joonas Niilola</person>
+    <person>Ilkka Tuohela</person>
+  </language>
+  <language code="fr" name="French">
+    <person>Jonathan Ernst</person>
+    <person>Stéphane Raimbault</person>
+    <person>Florent Le Coz</person>
+    <person>Robert-André Mauchin</person>
+  </language>
+  <language code="he" name="hebrew">
+    <person>Mark Krapivner</person>
+  </language>
+  <language code="hu" name="Hungarian">
+    <person>Gabor Kelemen</person>
+    <person>Kéménczy Kálmán</person>
+  </language>
+  <language code="it" name="Italian">
+    <person>Gianvito Cavasoli</person>
+    <person>Alessandro Gervaso</person>
+  </language>
+  <language code="ja" name="Japanese">
+    <person>Takeshi AIHANA</person>
+    <person>Koike Kazuhiko</person>
+  </language>
+  <language code="lt" name="Lithuanian">
+    <person>Gintautas Miliauskas</person>
+    <person>Žygimantas Beručka</person>
+  </language>
+  <language code="lv" name="Latvian">
+    <person>Raivis Dejus</person>
+  </language>
+  <language code="mk" name="Macedonian">
+    <person>Jovan Naumovski</person>
+  </language>
+  <language code="nb" name="Norwegian">
+    <person>Øivind Hoel</person>
+    <person>Kjartan Maraas</person>
+  </language>
+  <language code="nl" name="Dutch">
+    <person>Pepijn van de Geer</person>
+    <person>Wouter Bolsterlee</person>
+    <person>Stijn Verslycken</person>
+  </language>
+  <language code="oc" name="Occitan">
+    <person>Yannig Marchegay (Kokoyaya)</person>
+  </language>
+  <language code="pa" name="Panjabi">
+    <person>A S Alam</person>
+  </language>
+  <language code="pl" name="Polish">
+    <person>Tomasz Dominikowski</person>
+  </language>
+  <language code="pt" name="Portuguese">
+    <person>Filipe Gomes</person>
+  </language>
+  <language code="pt_BR" name="Brazilian Portuguese">
+    <person>Marco Carvalho</person>
+    <person>Og Maciel</person>
+    <person>Evandro Fernandes Giovanini</person>
+    <person>Vladimir Melo</person>
+    <person>Daniel Abreu</person>
+  </language>
+  <language code="ru" name="Russian">
+    <person>Alexandre Prokoudine</person>
+  </language>
+  <language code="sl" name="Slovenian">
+    <person>Matej Urbančič</person>
+  </language>
+  <language code="sr" name="Serbian">
+    <person>Goran Rakić</person>
+  </language>
+  <language code="sv" name="Swedish">
+    <person>Daniel Nylander</person>
+    <person>Christian Rose</person>
+  </language>
+  <language code="th" name="Thai">
+    <person>Theppitak Karoonboonyanan</person>
+    <person>Isriya Paireepairit</person>
+  </language>
+  <language code="vi" name="Vietnamese">
+    <person>Clytie Siddall</person>
+  </language>
+  <language code="zh_CN" name="Simplified Chinese">
+    <person>Funda Wang</person>
+  </language>
+  <language code="zh_HK" name="Chinese">
+    <person>Hsin-lin Cheng</person>
+  </language>
+  <language code="zh_TW" name="Chinese">
+    <person>Hsin-lin Cheng</person>
+  </language>
+</translators>
