@@ -1,12 +1,0 @@
-<Addin id="Banshee.Skins">
-
-  <Dependencies>
-    <Addin id="Banshee.Services" version="1.0"/>
-    <Addin id="Banshee.ThickClient" version="1.0"/>
-  </Dependencies>
-
-  <Extension path="/Banshee/ServiceManager/Service">
-    <Service class="Banshee.Skins.SkinManager"/>
-  </Extension>
-  
-</Addin>
