@@ -1,30 +1,0 @@
-<Project name="Banshee.Skins" fileversion="2.0" language="C#" clr-version="Net_2_0" ctype="DotNetProject">
-  <Configurations active="Debug">
-    <Configuration name="Debug" ctype="DotNetProjectConfiguration">
-      <Output directory="../../../bin" assemblyKeyFile="." assembly="Banshee.Skins" />
-      <Build debugmode="True" target="Library" />
-      <Execution runwithwarnings="True" consolepause="True" runtime="MsNet" clr-version="Net_2_0" />
-      <CodeGeneration compiler="Mcs" warninglevel="4" optimize="True" unsafecodeallowed="False" generateoverflowchecks="True" generatexmldocumentation="False" ctype="CSharpCompilerParameters" />
-    </Configuration>
-  </Configurations>
-  <Contents>
-    <File name="Banshee.Skins/SkingManager.cs" subtype="Code" buildaction="Compile" />
-    <File name="Banshee.Skins.addin.xml" subtype="Code" buildaction="EmbedAsResource" />
-    <File name="Resources/GlobalUI.xml" subtype="Code" buildaction="EmbedAsResource" />
-  </Contents>
-  <References>
-    <ProjectReference type="Project" localcopy="True" refto="Banshee.Core" />
-    <ProjectReference type="Project" localcopy="True" refto="Banshee.Services" />
-    <ProjectReference type="Project" localcopy="True" refto="Banshee.ThickClient" />
-    <ProjectReference type="Gac" localcopy="True" refto="gtk-sharp, Version=2.10.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
-  </References>
-  <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="True" RelativeMakefileName="./Makefile.am">
-    <BuildFilesVar Sync="True" Name="SOURCES" />
-    <DeployFilesVar />
-    <ResourcesVar Sync="True" Name="RESOURCES" />
-    <OthersVar />
-    <GacRefVar />
-    <AsmRefVar />
-    <ProjectRefVar />
-  </MonoDevelop.Autotools.MakefileInfo>
-</Project>
