@@ -1,13 +1,0 @@
-ASSEMBLY = Banshee.Skins
-TARGET = library
-LINK = $(REF_EXTENSION_SKINS)
-INSTALL_DIR = $(EXTENSIONS_INSTALL_DIR)
-
-SOURCES = Banshee.Skins/SkinManager.cs 
-
-RESOURCES =  \
-	Banshee.Skins.addin.xml \
-	Resources/GlobalUI.xml
-
-include $(top_srcdir)/build/build.mk
-
