@@ -1,12 +1,0 @@
-<ui>
-  <menubar name="MainMenu">
-    <menu name="ViewMenu" action="ViewMenuAction">
-      <placeholder name="ViewMenuAdditions">
-        <menu name="SkinsMenu" action="SkinsMenuAction">
-          <separator/>
-          <menuitem name="InstallSkins" action="InstallSkinsAction"/>
-        </menu>
-      </placeholder>
-    </menu>
-  </menubar>
-</ui>
