@@ -1,3 +1,7 @@
+2008-03-05  Aaron Bockover  <abock@gnome.org>
+
+	* POTFILES.in:
+
 2008-03-03  Ihar Hrachyshka <booxter@lacinka.org>
 
 	* be@latin.po: Updated Belarusian Latin translation.
